2010-01-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the SL standard library.

	* lib/include/sac_helpers.h: Move definitions into...
	* lib/include/undocumented.h: ... here. Add more C99 declarations.

	* lib/src/errno.c,
	* lib/include/cerrno.h: New.

	* lib/src/getenv.c,
	* lib/src/stpcpy.c,
	* lib/src/stpncpy.c,
	* lib/src/strchr.c,
	* lib/src/strcpy.c,
	* lib/src/strdup.c,
	* lib/src/strlen.c,
	* lib/src/strncmp.c,
	* lib/src/strncpy.c: Import from FreeBSD.

	* lib/src/mtalpha/memmove.S: Import from Linux.

	* lib/mtalpha.mk: Update accordingly.

2010-01-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix profiles `coma128' and `coma256'.

	* tools/lib/mt-profiles/coma128,
	* tools/lib/mt-profiles/coma256: Cores at 1.5GHz, not 1GHz.

2010-01-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Upgrade COMA support to latest simulator changes (+ bug fixes).

	* tools/lib/mt-profiles/coma128,
	* tools/lib/mt-profiles/coma256,
	* tools/lib/mt-profiles/ml-npcrypt-p1,
	* tools/lib/mt-profiles/ml-npcrypt-p2,
	* tools/lib/mt-profiles/ml-npcrypt-p4,
	* tools/lib/mt-profiles/ml-npcrypt-p8: Use new COMA configuration
	options.

	* tools/lib/mt-profiles/coma128,
	* tools/lib/mt-profiles/coma256: Use DDR3-2400 configuration
	instead of DDR3-1600, as decided in Apple-CORE.

	* tools/bin/slr.in: Fix handling of option -C. Repurpose -Cc and
	-Cd to "cores per cache" and "caches per directory", respectively.

	* tools/lib/r-mt-sim.sh.in: Update accordingly.

2010-01-12  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Add missing whitespace in `mtperf_report_intervals'.

	* lib/src/perf.c (mtperf_report_intervals): Print newlines around
	the outer Fibre array boundaries.

2010-01-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix some whitespace handling with `sl_set' / `sl_get'.

	* tools/lib/t-pppalpha/slimpl.m4,
	* tools/lib/t-ptl/slimpl.m4,
	* tools/lib/t-seqc/slimpl.m4,
	* tools/lib/t-utc/slimpl.m4,
	* tools/lib/t-utc0/slimpl.m4: Use `m4_normalize' and `m4_ifblank'
	where appropriate.