@@ -34,9 +34,9 @@ for d in "$HOME/.mt-profiles" $slc_datadir; do
    pf="$d/mt-profiles/$SIMPROFILE"
    if test -r "$pf"; then
       . "$d/mt-profiles/$SIMPROFILE"
-      if test -n "$VERBOSE"; then
+      if test -n "${VERBOSE:-}"; then
          echo "$basename: using profile: $pf" >&2
-         echo "$basename: profile description: $DESCRIPTION" >&2
+         echo "$basename: profile description: ${DESCRIPTION:-(no description)}" >&2
          simargs_base+=(-d)
       fi
       found=1
